// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load empty documents are filtered out 1`] = `
[
  {
    "doc": 1,
  },
  "str_doc",
  "",
  0,
  {
    "doc": 2,
  },
]
`;

exports[`load from file 1`] = `
[
  {
    "hello": 1234,
    "world": 111,
  },
  {
    "foo": [
      "bar",
      "zoo",
      "goo",
    ],
  },
  [
    "hello",
    "world",
  ],
]
`;

exports[`load from url 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app": "redis",
        "role": "master",
        "tier": "backend",
      },
      "name": "redis-master",
    },
    "spec": {
      "ports": [
        {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": {
        "app": "redis",
        "role": "master",
        "tier": "backend",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "redis-master",
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "app": "redis",
          "role": "master",
          "tier": "backend",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "redis",
            "role": "master",
            "tier": "backend",
          },
        },
        "spec": {
          "containers": [
            {
              "image": "registry.k8s.io/redis:e2e",
              "name": "master",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "resources": {
                "requests": {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app": "redis",
        "role": "replica",
        "tier": "backend",
      },
      "name": "redis-replica",
    },
    "spec": {
      "ports": [
        {
          "port": 6379,
        },
      ],
      "selector": {
        "app": "redis",
        "role": "replica",
        "tier": "backend",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "redis-replica",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "redis",
          "role": "replica",
          "tier": "backend",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "redis",
            "role": "replica",
            "tier": "backend",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [
                {
                  "name": "GET_HOSTS_FROM",
                  "value": "dns",
                },
              ],
              "image": "gcr.io/google_samples/gb-redisslave:v1",
              "name": "replica",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "resources": {
                "requests": {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app": "guestbook",
        "tier": "frontend",
      },
      "name": "frontend",
    },
    "spec": {
      "ports": [
        {
          "port": 80,
        },
      ],
      "selector": {
        "app": "guestbook",
        "tier": "frontend",
      },
      "type": "NodePort",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "frontend",
    },
    "spec": {
      "replicas": 3,
      "selector": {
        "matchLabels": {
          "app": "guestbook",
          "tier": "frontend",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "guestbook",
            "tier": "frontend",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [
                {
                  "name": "GET_HOSTS_FROM",
                  "value": "dns",
                },
              ],
              "image": "gcr.io/google-samples/gb-frontend:v4",
              "name": "php-redis",
              "ports": [
                {
                  "containerPort": 80,
                },
              ],
              "resources": {
                "requests": {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
]
`;

exports[`multi-line text block with long line keep line break 1`] = `
"foo: |-
  [section]
      abc: s
      def: 012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
bar: something
"
`;

exports[`save empty documents are respected 1`] = `
"{}
---
{}
---

---
empty: true
---
{}
"
`;

exports[`save empty values are preserved 1`] = `
"i_am_undefined: null
i_am_null: null
empty_array: []
empty_object: {}
"
`;

exports[`save multiple documents 1`] = `
"foo: bar
hello:
  - 1
  - 2
  - 3
---
number: 2
"
`;

exports[`save single document 1`] = `
"foo: bar
hello:
  - 1
  - 2
  - 3
"
`;

exports[`save strings are quoted 1`] = `
"foo: "on"
bar: this has a "big quote"
not_a_string: true
"
`;
